# urirun-connector-ocr

./: README.md  pyproject.toml
examples/: README.md
tests/: test_ocr.py
urirun_connector_ocr/: __init__.py  connector.manifest.json  contracts.py  core.py
